include/HYPREDRV.h

   
   struct hypredrv_struct;
   typedef struct hypredrv_struct *HYPREDRV_t;
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_Initialize(void);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_Finalize(void);
   HYPREDRV_EXPORT_SYMBOL void HYPREDRV_ErrorCodeDescribe(uint32_t error_code);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_Create(MPI_Comm    comm,
                                                   HYPREDRV_t *hypredrv_ptr);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_Destroy(HYPREDRV_t *hypredrv_ptr);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_InputArgsParse(int argc, char **argv,
                                                           HYPREDRV_t hypredrv);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_SetLibraryMode(HYPREDRV_t hypredrv);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_LinearSystemSetMatrixFromCSR(
      HYPREDRV_t hypredrv, HYPRE_BigInt row_start, HYPRE_BigInt row_end,
      const HYPRE_BigInt *indptr, const HYPRE_BigInt *col_indices,
      const HYPRE_Real *data);
   HYPREDRV_EXPORT_SYMBOL uint32_t
   HYPREDRV_LinearSystemSetRHSFromArray(HYPREDRV_t hypredrv, HYPRE_BigInt row_start,
                                        HYPRE_BigInt row_end, const HYPRE_Real *values);
   HYPREDRV_EXPORT_SYMBOL uint32_t
   HYPREDRV_LinearSystemSetInitialGuess(HYPREDRV_t hypredrv, HYPRE_Vector vec);
   HYPREDRV_EXPORT_SYMBOL uint32_t
   HYPREDRV_LinearSystemGetSolutionValues(HYPREDRV_t hypredrv, HYPRE_Complex **sol_data);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_LinearSystemGetSolutionNorm(
      HYPREDRV_t hypredrv, const char *norm_type, double *norm);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_LinearSolverCreate(HYPREDRV_t hypredrv);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_LinearSolverSetup(HYPREDRV_t hypredrv);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_LinearSolverApply(HYPREDRV_t hypredrv);
   HYPREDRV_EXPORT_SYMBOL uint32_t HYPREDRV_LinearSolverDestroy(HYPREDRV_t hypredrv);